tests/specs/serve/type_check/main.ts
export default {
  bad() {
  },
} satisfies Deno.ServeDefaultExport;
